deploy/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: node-example
  name: node-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-example
  template:
    metadata:
      labels:
        app: node-example
    spec:
      containers:
        - image: core.oliver-openshift-4-5-2bef1f4b4097001da9502000c44fc2b2-0000.us-east.containers.appdomain.cloud/library/nodejs-example:3
          imagePullPolicy: Always
          name: node-example
          ports:
            - containerPort: 8080
              protocol: TCP
