deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node-example
  name: node-example
spec:
  type: NodePort
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
  selector:
    app: node-example
